<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>de.daniel</groupId>
    <artifactId>bankprojekt</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <!--  <maven.compiler.source>21</maven.compiler.source>-->
        <!--  <maven.compiler.target>21</maven.compiler.target>  -->
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--suppress UnresolvedMavenProperty -->
        <javafx.module.path>${env.JAVAFX_SDK}/lib</javafx.module.path>
    </properties>


    <!-- zusätzliche Biblos            -->
    <dependencies>
        <dependency>
            <groupId>org.decimal4j</groupId>
            <artifactId>decimal4j</artifactId>
            <version>1.0.3</version>
        </dependency>

        <!-- Nur JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.15.2</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>23</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>bankprojekt.verarbeitung.KontoStarter</mainClass>
                    <options>
                        <option>--module-path</option>
                        <option>${javafx.module.path}</option>
                        <option>--add-modules</option>
                        <option>javafx.controls</option>
                    </options>
                </configuration>
            </plugin>
            <!-- Jacoco für Testabdeckung -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <!-- JaCoCo agent während der Testphase starten -->
                        <id>prepare-agent</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <!-- JaCoCo-Bericht nach den Tests erzeugen -->
                        <id>report</id>
                        <phase>test</phase> <!-- Berichtserstellung im verify-Phase -->
                        <goals>
                            <goal>report</goal> <!-- Generiere den Bericht -->
                        </goals>
                        <configuration>
                            <includes>
                                <include>**/bankprojekt/verarbeitung/Girokonto.class</include> <!-- Pfad zur Girokonto.class -->
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Surefire Plugin zum Ausführen der Tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/archive.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-archive</id>
                        <phase>package</phase> <!-- Archiv wird beim Package-Bauen erzeugt -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <configuration>
                    <source>21</source>
                    <show>protected</show>
                    <quiet>true</quiet>
                </configuration>
                <executions>
                    <execution>
                        <id>dokuErzeugen</id>
                        <phase>package</phase>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>


</project>